// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contacts GraphQL query contact renders all fields 1`] = `
Object {
  "birthday": Object {
    "day": null,
    "month": null,
    "year": null,
  },
  "communicationMethods": Array [
    Object {
      "label": "Email",
      "type": "email",
      "value": "ringostarr@beatles.com",
    },
    Object {
      "label": "Phone",
      "type": "phone",
      "value": "5553456789",
    },
  ],
  "events": Array [],
  "favorite": true,
  "id": "5cbe7a52a7c6dd86a4b719c3",
  "name": "Ringo Starr",
  "notes": Array [],
}
`;

exports[`Contacts GraphQL query contacts renders all fields for all data 1`] = `
Array [
  Object {
    "birthday": Object {
      "day": 23,
      "month": 3,
      "year": 2010,
    },
    "communicationMethods": Array [
      Object {
        "label": "Email",
        "type": "email",
        "value": "johnlennon@beatles.com",
      },
      Object {
        "label": "Phone",
        "type": "phone",
        "value": "5551234567",
      },
    ],
    "events": Array [],
    "favorite": true,
    "id": "5cbe7a2a5e55d05aadfd38c1",
    "name": "John Lennon",
    "notes": Array [],
  },
  Object {
    "birthday": Object {
      "day": 23,
      "month": 3,
      "year": null,
    },
    "communicationMethods": Array [
      Object {
        "label": "Email",
        "type": "email",
        "value": "paulmccartney@beatles.com",
      },
      Object {
        "label": "Phone",
        "type": "phone",
        "value": "5552345678",
      },
    ],
    "events": Array [
      Object {
        "id": "5cbe7a6cbcc4685e1341fce1",
      },
    ],
    "favorite": false,
    "id": "5cbe7a4816430674b1375ac2",
    "name": "Paul McCartney",
    "notes": Array [
      Object {
        "label": "How did you meet?",
        "value": "Lorem ipsum dolor sit amet.",
      },
    ],
  },
  Object {
    "birthday": Object {
      "day": null,
      "month": null,
      "year": null,
    },
    "communicationMethods": Array [
      Object {
        "label": "Email",
        "type": "email",
        "value": "ringostarr@beatles.com",
      },
      Object {
        "label": "Phone",
        "type": "phone",
        "value": "5553456789",
      },
    ],
    "events": Array [],
    "favorite": true,
    "id": "5cbe7a52a7c6dd86a4b719c3",
    "name": "Ringo Starr",
    "notes": Array [],
  },
]
`;
